web-infras/parser/tests/fixtures/babel/es2015/uncategorised/367/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,7)
1|class await {}
 |     ^
